--- a/index.html
+++ b/index.html
@@ -6,18 +6,32 @@
     <title>Less</title>
 </head>
 <body>
-    <header class="header">
+<header class="header"></header>
+<div class="container">
+    <nav class="navigation">
+        <button class="nav-button"> HOME</button>
+        <button class="nav-button"> ABOUT US</button>
+        <button class="nav-button"> CONTACT</button>
+    </nav>
+    <aside  class="sidebar">
+        <div class="side-card">
 
-    </header>
-    <nav></nav>
-    <aside></aside>
-    <section>
+            <p></p>
+        </div>
+    </aside>
+    <section class="main-content">
         <article>
             <video>
 
             </video>
         </article>
+        <article>
+            <audio>
+
+            </audio>
+        </article>
     </section>
-    <footer></footer>
+</div>
+<footer></footer>
 </body>
 </html>
